--- a/Cross.toml
+++ b/Cross.toml
@@ -8,3 +8,17 @@ pre-build = [
     "dpkg --add-architecture $CROSS_DEB_ARCH",
     "apt-get update && apt-get --assume-yes install --no-install-recommends libudev-dev:$CROSS_DEB_ARCH",
 ]
+
+# For Raspi 2-4
+[target.armv7-unknown-linux-gnueabihf]
+pre-build = [
+    "dpkg --add-architecture $CROSS_DEB_ARCH",
+    "apt-get update && apt-get --assume-yes install --no-install-recommends libudev-dev:$CROSS_DEB_ARCH",
+]
+
+# For Raspi 2-4 (64-bit)
+[target.aarch64-unknown-linux-gnu]
+pre-build = [
+    "dpkg --add-architecture $CROSS_DEB_ARCH",
+    "apt-get update && apt-get --assume-yes install --no-install-recommends libudev-dev:$CROSS_DEB_ARCH",
+]
